<resources>
    <string name="app_name">Agenda Alunos</string>
    <string name="title_activity_formulario_editar">FormularioEditar</string>

    <string name="delete_view">Delete clicked view</string>

    <string name="more_view">Increment clicked view</string>

    <string name="main_button_linear_vertical">Vertical list</string>

    <string name="main_button_linear_horizontal">Horizontal list</string>

    <string name="main_button_grid">Grid</string>

    <string name="main_button_staggered">staggered_grid</string>
    <string name="pesquisar_por_rg">Pesquisar por Rg</string>
    <string name="bt_lista_alunos">Lista de Cadastros</string>
    <string name="bt_pesquisar">Pesquisar</string>
    <string name="bt_sobre">Sobre</string>
    <string name="bt_sair">Sair</string>
    <string name="bt_login">Logar</string>
    <string name="bt_registrar">Registrar</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_salvar">Salvar</string>
    <string name="Desenvolvedor">Desenvolvido por: Romário Menezes</string>
    <string name="Versao">Versão: 1.01v</string>
    <string name="App">Nome do Aplicativo: Agenda Alunos</string>
    <string name="st_nome">Nome</string>
    <string name="st_data_nascimento">Data de Nascimento</string>
    <string name="st_telefone">Telefone</string>
    <string name="st_senha">Senha</string>
    <string name="st_confir_senha">Confirmar Senha</string>
    <string name="st_linha">NOME: ##nome##\nCPF: ##cpf##\nRG: ##rg##\nTELEFONE: ##telefone##\nDATA DE NASCIMENTO: ##dataNascimento##\nE-MAIL: ##email##</string>
    <string name="permanecerLogado">Permanecer Logado</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="st_logout">Deslogar</string>
    <string name="st_pesquisar">Nome do Aluno</string>
    <string name="st_saudacao">Olá</string>

</resources>
